# funpart

./: README.md  funpart.cabal
app/: Main.hs
src/: Approx.hs  Core.hs  CrossSection.hs  MC.hs  Particle.hs  Problem.hs  Score.hs  SimSetup.hs  Source.hs  Stat.hs  Step.hs  Track.hs  Vec.hs  VecSpace.hs
src/Physics/FunPart/: Approx.hs  Coords.hs  Core.hs  CrossSection.hs  MC.hs  Mesh.hs  Particle.hs  Problem.hs  Score.hs  SimSetup.hs  Source.hs  Stat.hs  Track.hs  Vec.hs  VecSpace.hs
src/Physics/FunPart/Problem/: Common.hs
src/Physics/FunPart/Source/: Distributions.hs
src/Problem/: Common.hs
src/Source/: Distributions.hs
test/: MCTest.hs  ParticleTest.hs  ProblemTest.hs  SimSetupTest.hs  Spec.hs  StatTest.hs  VecTest.hs
test/Physics/FunPart/: MCTest.hs  MeshTest.hs  ParticleTest.hs  ProblemTest.hs  SimSetupTest.hs  StatTest.hs  VecTest.hs
