name:                funpart
version:             0.1.0.0
synopsis:            FUNctional PARTicle transport
description:         Please see README.md
homepage:            https://github.com/arekfu/funpart#readme
license:             BSD3
license-file:        LICENSE
author:              Davide Mancusi
maintainer:          davide.mancusi@cea.fr
copyright:           Copyright: (c) 2016 Davide Mancusi
category:            Physics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Core
                     , Vec
                     , VecSpace
                     , Approx
                     , Particle
                     , CrossSection
                     , Track
                     , MC
                     , SimSetup
                     , Problem
                     , Problem.Common
                     , Score
                     , Source
                     , Source.Distributions
  build-depends:       base < 5
                     , lens
                     , random
                     , mtl
                     , vector
  ghc-options:         -Wall
  default-language:    Haskell2010

--executable funpart-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , funpart
--  default-language:    Haskell2010

test-suite funpart-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       VecTest
                     , ParticleTest
                     , MCTest
  build-depends:       base
                     , lens
                     , vector
                     , funpart
                     , random
                     , mtl
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/arekfu/funpart
