name:                funpart
version:             0.1.0.0
synopsis:            FUNctional PARTicle transport
description:         Please see README.md
homepage:            https://github.com/arekfu/funpart#readme
license:             BSD3
license-file:        LICENSE
author:              Davide Mancusi
maintainer:          davide.mancusi@cea.fr
copyright:           Copyright: (c) 2016 Davide Mancusi
category:            Physics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Physics.FunPart.Core
                     , Physics.FunPart.Vec
                     , Physics.FunPart.VecSpace
                     , Physics.FunPart.Approx
                     , Physics.FunPart.Particle
                     , Physics.FunPart.CrossSection
                     , Physics.FunPart.Track
                     , Physics.FunPart.MC
                     , Physics.FunPart.SimSetup
                     , Physics.FunPart.Problem
                     , Physics.FunPart.Problem.Common
                     , Physics.FunPart.Score
                     , Physics.FunPart.Source
                     , Physics.FunPart.Source.Distributions
                     , Physics.FunPart.Stat
  build-depends:       base < 5
                     , lens
                     , random
                     , mtl
                     , vector
                     , containers
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  BangPatterns
  other-extensions:    TemplateHaskell
                     , GADTs
                     , FlexibleContexts
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , FlexibleInstances
                     , FunctionalDependencies

executable funpart
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , funpart
                     , random
                     , containers
  default-language:    Haskell2010

test-suite funpart-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Physics.FunPart.VecTest
                     , Physics.FunPart.ParticleTest
                     , Physics.FunPart.MCTest
                     , Physics.FunPart.ProblemTest
                     , Physics.FunPart.SimSetupTest
                     , Physics.FunPart.StatTest
  build-depends:       base
                     , lens
                     , vector
                     , funpart
                     , random
                     , mtl
                     , containers
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/arekfu/funpart
